# pokras

./: .env.example  .gitignore  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0144257ae6b2_add_game_map_column.py  0c96b40927f9_add_creator_to_country.py  3090bc491813_add_roll_values_column_to_game_table.py  3a1a3d2aee04_last_roll_table.py  498df4b1b6c3_increase_tile_code_size.py  580cb9a66459_timestamp_field_for_last_roll_table.py  5d4af7ff9fb2_rename_player_to_country.py  73493bb59056_game_cooldown_fields.py  74e3315ba15f_remove_default_roll_values_value.py  8b055fcc867e_add_tiles_counters.py  a4cdd2d61404_add_proper_constraints_names.py  a7e2c236bde0_.py  a7e2c236bde0_initial_migration.py  cbb7fc8f8e30_per_game_unique_constraints_fix.py  da482cfe40db_fix_roll_values.py
deploy/: deploy.sh  deploy_utils.sh
deploy/logrotate/: pokras.conf
deploy/systemd/: pokras.service  pokras.target
pokras/: app.py  config.py
pokras/commands/: __init__.py  game.py  test_proxy.py  test_websocket_proxy.py
pokras/db/: base.py  datetime_utc.py  engine.py
pokras/game/commands/: checks.py  country.py  game.py  ping.py  roll.py
pokras/game/games/: strategy.py
pokras/game/queries/: create_country.py  create_game.py  create_tile.py  get_country.py  get_game.py  get_tile.py  update_game.py  (+2 more)
pokras/scripts/: check_images_memory_usage.py  check_jsons_memory_usage.py  load_image.py  test_http_proxy.py  test_websocket_proxy.py
pokras/text/: parser.py  responses.py  tags.py
pokras/utils/: checks.py  discord.py  perf.py  text.py
(+148 files in other folders)
